--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body>
 
-    <h2>WebBT / Measurement Node dig-up</h2>
+    <h2>WebBT / Measurement Node temp-up</h2>
 
 	
 
@@ -216,7 +216,7 @@ function handleCharacteristicValueChanged(event) {
   log('Received value: ' + value);
   */
   var value = event.target.value;
-  log('value: ' + value.getUint8(0) + ' ' + value.getUint8(1)+ ' ' + value.getUint8(2) + ' ' + value.getUint8(3) + ' ' + value.getUint8(4) + ' ' + value.getUint8(5) + ' ' + value.getUint8(6) + ' ' + value.getUint8(7) + ' ' + value.getUint8(8) + ' ' + value.getUint8(9) + ' ' + value.getUint8(10) + ' ' + value.getUint8(11) + ' ' + value.getUint8(12) + ' ' + value.getUint8(13) + ' ' + value.getUint8(14) + ' ' + value.getUint8(15) + ' ' + value.getUint8(16) + ' ' + value.getUint8(17) + ' ' + value.getUint8(18) + ' ' + value.getUint8(19));
+//  log('value: ' + value.getUint8(0) + ' ' + value.getUint8(1)+ ' ' + value.getUint8(2) + ' ' + value.getUint8(3) + ' ' + value.getUint8(4) + ' ' + value.getUint8(5) + ' ' + value.getUint8(6) + ' ' + value.getUint8(7) + ' ' + value.getUint8(8) + ' ' + value.getUint8(9) + ' ' + value.getUint8(10) + ' ' + value.getUint8(11) + ' ' + value.getUint8(12) + ' ' + value.getUint8(13) + ' ' + value.getUint8(14) + ' ' + value.getUint8(15) + ' ' + value.getUint8(16) + ' ' + value.getUint8(17) + ' ' + value.getUint8(18) + ' ' + value.getUint8(19));
   
   var dataType = value.getUint8(0);
 
@@ -225,12 +225,12 @@ function handleCharacteristicValueChanged(event) {
 		var x1 = parseFloat(handleAccData(4, value)).toFixed(2);
 		var y1 = parseFloat(handleAccData(6, value)).toFixed(2);
 		var z1 = parseFloat(handleAccData(8, value)).toFixed(2);
-		log('x: ' + x1 + ' y: ' + y1 + ' z: ' + z1);
+//		log('x: ' + x1 + ' y: ' + y1 + ' z: ' + z1);
 		
 		
   }else if (dataType == 2){						// Environment data
   
-    log('datatype: ' + dataType);
+    var tempdata = parseFloat(handleEnvData(6, value)).toFixed(2);
   
   }
   
@@ -244,7 +244,11 @@ function handleCharacteristicValueChanged(event) {
 		return res;
   }
  
+ function handleAccData(index, value) {
   
+		let raw_temp = value.getUint32(index, /*littleEndian=*/true);
+  
+  }
 }
 
 /* Utils */
