--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body>
 
-    <h2>WebBT / Measurement Nodee </h2>
+    <h2>WebBT / Measurement Nougat </h2>
 
 	
 
@@ -232,7 +232,7 @@ function handleCharacteristicValueChanged(event) {
   
     log('value: ' + value.getUint8(0) + ' ' + value.getUint8(1)+ ' ' + value.getUint8(2) + ' ' + value.getUint8(3) + ' ' + value.getUint8(4) + ' ' + value.getUint8(5) + ' ' + value.getUint8(6) + ' ' + value.getUint8(7) + ' ' + value.getUint8(8) + ' ' + value.getUint8(9) + ' ' + value.getUint8(10) + ' ' + value.getUint8(11) + ' ' + value.getUint8(12) + ' ' + value.getUint8(13) + ' ' + value.getUint8(14) + ' ' + value.getUint8(15) + ' ' + value.getUint8(16) + ' ' + value.getUint8(17) + ' ' + value.getUint8(18) + ' ' + value.getUint8(19));
 
-    var tempdata = parseFloat(handleEnvData(9, value)).toFixed(1);
+    var tempdata = parseFloat(handleEnvData(7, value)).toFixed(1);
 	log('TEMPERATURE: ' + tempdata + ' C');
   
   }
