--- a/index.html
+++ b/index.html
@@ -230,10 +230,13 @@ function handleCharacteristicValueChanged(event) {
 		
   }else if (dataType == 2){						// Environment data
   
-    log('value: ' + value.getUint8(0) + ' ' + value.getUint8(1)+ ' ' + value.getUint8(2) + ' ' + value.getUint8(3) + ' ' + value.getUint8(4) + ' ' + value.getUint8(5) + ' ' + value.getUint8(6) + ' ' + value.getUint8(7) + ' ' + value.getUint8(8) + ' ' + value.getUint8(9) + ' ' + value.getUint8(10) + ' ' + value.getUint8(11) + ' ' + value.getUint8(12) + ' ' + value.getUint8(13) + ' ' + value.getUint8(14) + ' ' + value.getUint8(15) + ' ' + value.getUint8(16) + ' ' + value.getUint8(17) + ' ' + value.getUint8(18) + ' ' + value.getUint8(19));
+    // log('value: ' + value.getUint8(0) + ' ' + value.getUint8(1)+ ' ' + value.getUint8(2) + ' ' + value.getUint8(3) + ' ' + value.getUint8(4) + ' ' + value.getUint8(5) + ' ' + value.getUint8(6) + ' ' + value.getUint8(7) + ' ' + value.getUint8(8) + ' ' + value.getUint8(9) + ' ' + value.getUint8(10) + ' ' + value.getUint8(11) + ' ' + value.getUint8(12) + ' ' + value.getUint8(13) + ' ' + value.getUint8(14) + ' ' + value.getUint8(15) + ' ' + value.getUint8(16) + ' ' + value.getUint8(17) + ' ' + value.getUint8(18) + ' ' + value.getUint8(19));
 
+    var presdata = parseFloat(handleEnvData(3, value)).toFixed(1);
     var tempdata = parseFloat(handleEnvData(7, value)).toFixed(1);
-	log('TEMPERATURE: ' + tempdata + ' C');
+	var humidata = parseFloat(handleEnvData(11, value)).toFixed(1);
+	
+	log('PRESSURE: ' + presdata + 'kPa; TEMPERATURE: ' + tempdata + ' C; HUMIDITY: ' + humidata + ' %');
   
   }
   
