--- a/index.html
+++ b/index.html
@@ -71,11 +71,8 @@ Information Service</a> characteristics from a BLE Device. See <a href="https://
 
 <button id="getchar">Connect + Measure</button>
 <br><br>
-
-
-	<input name="textbox1" type="text" />
 	
-	<input name="buttonSend" onclick="sendChars(document.getElementsByName('textbox1')[0].value)" type="button" value="Disconnect" />
+
 
 
 <script>
@@ -107,10 +104,14 @@ Information Service</a> characteristics from a BLE Device. See <a href="https://
 </script>
 
 <h3>Data stream:</h3>
-<p id="p1">pressure</p>
-<p id="p2">temperature</p>
-<p id="p3">humidity</p>
+<p id="p1">Pressure:</p>
+<p id="p2">Temperature:</p>
+<p id="p3">Humidity:</p>
 
+	<br>
+	<input name="buttonSend" onclick="disconnect()" type="button" value="Disconnect" />
+	<br>
+	
 <h3>Live Output</h3>
 <div id="output" class="output">
   <div id="content"></div>
@@ -152,7 +153,7 @@ function onButtonClick() {
   .then(service => {
 	setter = service.getCharacteristic('00001525-1212-efde-1523-785feabcd123');
 	getter = service.getCharacteristic('00001524-1212-efde-1523-785feabcd123');
-    log('Got Device Information Characteristics...');
+    //log('Got Device Information Characteristics...');
 	return getter;
   })
   
@@ -162,13 +163,13 @@ function onButtonClick() {
 
 .then(characteristic => {
 	characteristic.addEventListener('characteristicvaluechanged', handleCharacteristicValueChanged);
-	log('Notifications have been started to Getter!');
+	//log('Notifications have been started to Getter!');
 	turnMeasurementOn();
 	})
 /* NOTIFICATIONS ON */
   
   function turnMeasurementOn() {
- log('Change Characteristics to Setter...');
+//log('Change Characteristics to Setter...');
   return bluetoothDevice.gatt.connect()
 	.then(server => {
 	return server.getPrimaryService('00001523-1212-efde-1523-785feabcd123');
@@ -191,8 +192,8 @@ function onButtonClick() {
   }
 }
 
-function sendChars(charvalue) {
-	log('Setting Measurement off... ' + charvalue);
+function disconnect() {
+	log('Setting Measurement off... ');
 	return bluetoothDevice.gatt.connect()
 	.then(server => {
 	return server.getPrimaryService('00001523-1212-efde-1523-785feabcd123');
