--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
     <meta name="description" content="Sample illustrating the use of Web Bluetooth / Device Information Characteristics.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-       <script type="text/javascript" src="../smoothie.js"></script>
+       <script type="text/javascript" src="smoothie.js"></script>
 	   
     <title>Web BT / Device Information Characteristics</title>
     <script>
