--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body>
 
-    <h2>WebBT/TinyNode Demo</h2>
+    <h2>WebBT / TinyNode Demo</h2>
 
 	
 
@@ -133,7 +133,7 @@ var bluetoothDevice;
 var setter;
 var getter;
 var msgcounter;
-var chart = new SmoothieChart({millisPerPixel:100,grid:{millisPerLine:9000}});
+var chart = new SmoothieChart({millisPerPixel:100,maxValueScale:1.16,grid:{millisPerLine:9000}});
 var ts = new TimeSeries();
 
 
