--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ var bluetoothDevice;
 var setter;
 var getter;
 var msgcounter;
-var chart = new SmoothieChart({millisPerPixel:100,maxValueScale:1.16,grid:{millisPerLine:9000}});
+var chart = new SmoothieChart({millisPerPixel:100,maxValueScale:1.16,grid:{millisPerLine:9000},yRangeFunction:myYRangeFunction});
 var ts = new TimeSeries();
 
 
@@ -224,6 +224,12 @@ function disconnect() {
   
   }
 
+  function myYRangeFunction(range) {
+  // TODO implement your calculation using range.min and range.max
+  var min = 20;
+  var max = 30;
+  return {min: min, max: max};
+}
 
 function handleCharacteristicValueChanged(event) {
   /* var value = event.target.value;
