--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 <p id="p4">Messages received:</p>
 <canvas id="env_chart" width="340" height="150"></canvas>
 
-	<input name="disconnect" onclick="disconnect()" type="button" value="Disconnect" disabled="true"/>
+	<input id="disconnect" onclick="disconnect()" type="button" value="Disconnect" disabled="true"/>
 	<br>
 	
 <h3>Live Output</h3>
