--- a/index.html
+++ b/index.html
@@ -66,8 +66,13 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
 
 <p>Using Web Bluetooth API (+ smoothie.js) to read data from VTT TinyNode.</p>
+ <table style="width:100%">
+  <tr>
+    <td style="width:50%"><button id="connect">Connect + Measure</button></td>
+    <td style="width:50%"><input id="disconnect" onclick="disconnect()" type="button" value="Disconnect" disabled="true"/></td>
+  </tr>
+</table> 
 
-<button id="connect">Connect + Measure</button>
 <br>
 
 <script>
@@ -98,7 +103,6 @@ Copyright 2017 Google Inc. All Rights Reserved.
   };
 </script>
 
-<h3>Data:</h3>
  <table style="width:100%">
   <tr>
     <td><p id="p1">P:</p></td>
@@ -110,7 +114,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 <p id="p4">Messages received:</p>
 <canvas id="env_chart" width="340" height="150"></canvas>
 
-	<input id="disconnect" onclick="disconnect()" type="button" value="Disconnect" disabled="true"/>
+	
 	<br>
 	
 <h3>Live Output</h3>
