--- a/index.html
+++ b/index.html
@@ -110,14 +110,10 @@ Copyright 2017 Google Inc. All Rights Reserved.
     <td><p id="p3">H:</p></td>
   </tr>
 </table> 
-
 <p id="p4">Messages received:</p>
-<canvas id="env_chart" width="340" height="150"></canvas>
-
-	
-	<br>
-	
-<h3>Live Output</h3>
+<canvas id="env_chart" width="100%" height="180px"></canvas>
+		
+<h3>Live output</h3>
 <div id="output" class="output">
   <div id="content"></div>
   <div id="status"></div>
