--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ Copyright 2017 Google Inc. All Rights Reserved.
 <p>Using Web Bluetooth API (+ smoothie.js) to read data from VTT TinyNode.</p>
  <table style="width:100%">
   <tr>
-    <td style="width:50%"><button id="connect">Connect + Measure</button></td>
-    <td style="width:50%"><input id="disconnect" onclick="disconnect()" type="button" value="Disconnect" disabled="true"/></td>
+    <td style="width:50%"><button id="connect" style="width:125">Connect + Measure</button></td>
+    <td style="width:50%"><input id="disconnect" onclick="disconnect()" type="button" value="Disconnect" disabled="true" style="width:125"/></td>
   </tr>
 </table> 
 
@@ -111,7 +111,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
   </tr>
 </table> 
 <p id="p4">Messages received:</p>
-<canvas id="env_chart" width="100%" height="180px"></canvas>
+<canvas id="env_chart" width="345" height="200"></canvas>
 		
 <h3>Live output</h3>
 <div id="output" class="output">
