--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ Copyright 2017 Google Inc. All Rights Reserved.
 <p>Using Web Bluetooth API (+ smoothie.js) to read data from VTT TinyNode.</p>
  <table style="width:100%">
   <tr>
-    <td style="width:50%"><button id="connect" style="width:125">Connect + Measure</button></td>
-    <td style="width:50%"><input id="disconnect" onclick="disconnect()" type="button" value="Disconnect" disabled="true" style="width:125"/></td>
+    <td style="width:50%"><button style="height:50px;width:200px" id="connect">Connect + Measure</button></td>
+    <td style="width:50%"><input style="height:50px;width:200px" id="disconnect" onclick="disconnect()" type="button" value="Disconnect" disabled="true" /></td>
   </tr>
 </table> 
 
