--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 </table> 
 
 		
-<h3>Live output</h3>
+<h3 style="display:none;>Live output</h3>
 <div id="output" class="output" style="display:none;>
   <div id="content"></div>
   <div id="status"></div>
