--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
        <script type="text/javascript" src="../smoothie.js"></script>
+	   <link href="https://fonts.googleapis.com/css?family=Overpass+Mono" rel="stylesheet"> 
 	   
     <title>Web BT / Device Information Characteristics</title>
     <script>
@@ -114,8 +115,8 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
  <table style="width:100%">
   <tr>
-    <td><p id="p5">Event Log</p></td>
-	<td><p id="p4">Msgs:</p></td>
+    <td><p id="p5" style="font-family: 'Overpass Mono', monospace; font-size:10px;">Event Log</p></td>
+	<td><p id="p4" style="font-family: 'Overpass Mono', monospace; font-size:10px;">Msgs:</p></td>
   </tr>
 </table> 
 
