--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
     
   </head>
 
-  <body>
+  <body style="font-family: 'Overpass Mono', monospace; font-size:14px;">
 
     <h2>WebBT / TinyNode Demo</h2>
 
@@ -116,7 +116,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
  <table style="width:100%">
   <tr>
     <td><p id="p5" style="font-family: 'Overpass Mono', monospace; font-size:10px;">Event Log</p></td>
-	<td><p id="p4" style="font-family: 'Overpass Mono', monospace; font-size:10px;">Msgs:</p></td>
+	<td><p id="p4" style="font-family: 'Overpass Mono', monospace; font-size:10px;">Msgs</p></td>
   </tr>
 </table> 
 
