--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
     
   </head>
 
-  <body style="font-family: 'Titillium Web', monospace; font-size:14px;">
+  <body style="font-family: 'Titillium Web', monospace; font-size:16px;">
 
     <h2>WebBT / TinyNode Demo</h2>
 
@@ -66,13 +66,14 @@ Copyright 2017 Google Inc. All Rights Reserved.
 </script>
 
 <script>
-  
+  var nodename = {
     var parameters = location.search.substring(1).split("&");
 
     var temp = parameters[0].split("=");
-    var nodename = unescape(temp[1]);
-    document.getElementById("p6").innerHTML = nodename;
-  
+    nodename = unescape(temp[1]);
+   
+  };
+   document.getElementById("p6").innerHTML = nodename;
 </script>
 
 
