--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@ Copyright 2017 Google Inc. All Rights Reserved.
 </script>
 
 <script>
+document.getElementById("p6").innerHTML = nodename;
   var nodename = {
     var parameters = location.search.substring(1).split("&");
-
+document.getElementById("p6").innerHTML = parameters;
     var temp = parameters[0].split("=");
+	document.getElementById("p6").innerHTML = temp;
     nodename = unescape(temp[1]);
    
   };
