--- a/index.html
+++ b/index.html
@@ -67,14 +67,11 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
 <script>
  log('entering nodename...');
-  var nodename = {
-    var parameters = location.search.substring(1).split("&");
+  var parameters = location.search.substring(1).split("&");
 log('params...');
     var temp = parameters[0].split("=");
 log('temp...');
     nodename = unescape(temp[1]);
-   
-  };
    document.getElementById("p6").innerHTML = nodename;
 </script>
 
@@ -136,7 +133,7 @@ log('temp...');
 
 		
 <h3 style="display:none;>Live output</h3>
-<div id="output" class="output" style="display:none;>
+<div id="output" class="output">
   <div id="content"></div>
   <div id="status"></div>
   <pre id="log"></pre>
