node name as parameter

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ log('temp...');
   <tr>
     <td><p id="p5" style="font-family: 'Titillium Web', monospace; font-size:10px;">Event Log</p></td>
 	<td><p id="p4" style="font-family: 'Titillium Web', monospace; font-size:10px;">Msgs</p></td>
-	<td><p id="p6" style="font-family: 'Titillium Web', monospace; font-size:10px;">Noode</p></td>
+	<td><p id="p6" style="font-family: 'Titillium Web', monospace; font-size:10px;">Nodetsu</p></td>
   </tr>
 </table> 
 
